# SmartAd-Serverless

./: .gitignore  Cargo.toml  package-lock.json  serverless.yml
.github/workflows/: test.yml
src/: lib.rs  models.rs
src/handlers/: mod.rs  register_confirmation_handler.rs  sign_up_handler.rs  utils.rs
