[package]
name = "smartad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
lambda_runtime = { version = "0.6.0", optional = true }
lambda_http = { version = "0.6.0", optional = true }
serde = "1"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.17"
aws_lambda_events = "0.6.3"

[features]
default = ["lambda"]
lambda = ["lambda_runtime", "lambda_http"]

[[bin]]
name = "sign_up_user"
path = "src/bin/lambda/sign_up_user.rs"
test = false
required-features = ["lambda"]